; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_phy.c_scic_sds_phy_ready_state_enter.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_phy.c_scic_sds_phy_ready_state_enter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCI_BASE_PHY_STATE_READY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @scic_sds_phy_ready_state_enter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scic_sds_phy_ready_state_enter(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @SCI_BASE_PHY_STATE_READY, align 4
  %7 = call i32 @scic_sds_phy_set_base_state_handlers(i32* %5, i32 %6)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @scic_sds_phy_get_controller(i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @scic_sds_phy_get_port(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @scic_sds_controller_link_up(i32 %9, i32 %11, i32* %12)
  ret void
}

declare dso_local i32 @scic_sds_phy_set_base_state_handlers(i32*, i32) #1

declare dso_local i32 @scic_sds_controller_link_up(i32, i32, i32*) #1

declare dso_local i32 @scic_sds_phy_get_controller(i32*) #1

declare dso_local i32 @scic_sds_phy_get_port(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
